--- a/task1.html
+++ b/task1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Обо мне</h1>
-	<img src="Привет.jpg" height="100px">
+	<img src="Привет.jpg" height="300px">
 <p>Привет! Меня зовут Элина, и я начинающий веб-программист. Недавно начала изучать HTML и уже создаю свои первые сайты.</p>
 
 <h3>Мое образование:</h3>
@@ -71,7 +71,7 @@
 </p>
   <input type="submit">
 <p>© 2025 Мой личный сайт портфолио. Все правы защищены</p>
-<p> Сайт размещен на <a href="https://docs.github.com/en/pages">бесплатном хостинге</a>| Домен: </p>
+<span> Сайт размещен на <a href="https://docs.github.com/en/pages">бесплатном хостинге</a> | Домен: <b>warttay.github.io</b>
 
 </body>
 </html>
