--- a/task1.html
+++ b/task1.html
@@ -71,7 +71,7 @@
 </p>
   <input type="submit">
 <p>© 2025 Мой личный сайт портфолио. Все правы защищены</p>
-<span> Сайт размещен на <a href="https://docs.github.com/en/pages">бесплатном хостинге</a> | Домен: <b>warttay.github.io</b>
-
+<span> Сайт размещен на <a href="https://docs.github.com/en/pages">бесплатном хостинге</a> | Домен: <b>warttay.github.io</b></span>
+</form>
 </body>
 </html>
