--- a/task1.html
+++ b/task1.html
@@ -42,7 +42,7 @@
 </ol>
 
 <h2>Мои проекты</h2>
-<a href="https://github.com/Warttay/Lesson-1/settings/pages">Мой первый сайт</a>
+<a href="https://warttay.github.io/Lesson-1/">Мой первый сайт</a>
 <h3>Форма обратной связи</h3>
 <form action="#" method="post">
 	<label for>Ваше имя:</label>
