--- a/task1.html
+++ b/task1.html
@@ -49,7 +49,7 @@
 	<input type="text" name="username" value="Введите ваше имя" style="color: grey;"><br>
 	<br>
 	<label for>Ваш email:</label>
-	<input type="password" name="Password" value="example@mail.ru" style="color: grey;"><br>
+	<input type="text" name="email" value="example@mail.ru" style="color: grey;"><br>
 	<br>
   <input type="radio" id="male" name="time" value="hurry">
   <label for="hurry">Срочно</label>
