--- a/task1.html
+++ b/task1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Обо мне</h1>
-	<img src="Привет.jpg" height="300px">
+	<img src="Привет.jpg" height="300px" alt="Изображение">
 <p>Привет! Меня зовут Элина, и я начинающий веб-программист. Недавно начала изучать HTML и уже создаю свои первые сайты.</p>
 
 <h3>Мое образование:</h3>
@@ -69,7 +69,7 @@
 <label for="message">Сообщение:</label><br>
    <textarea name="message" rows="3" cols="40" placeholder="Введите Ваше сообщение"></textarea>
 </p>
-  <input type="submit">
+  <input type="submit" value="Отправить данные">
 <p>© 2025 Мой личный сайт портфолио. Все правы защищены</p>
 <span> Сайт размещен на <a href="https://docs.github.com/en/pages">бесплатном хостинге</a> | Домен: <b>warttay.github.io</b></span>
 </form>
